# overmind

./: .gitignore  README.md  blog.cn.manual.md  blog.cn.md  blog.md  demo-vae.py  demo.py  demo2.py  pdm_build.py  pyproject.toml  setup.py
.github/workflows/: release.yml
slide/: index.html
src/overmind/: api.py  cli.py  common.py  reducer.py  server.py  shmem.py
src/overmind/assets/: predefined.cfg
src/overmind/csrc/: omhelpers.cpp
src/overmind/utils/: log.py  misc.py
tests/: test_cext.py  test_shmem.py
