[project]
name = "overmind"
dynamic = ["version"]
description = "Daemon to serve shared PyTorch models"
authors = [
    {name = "Proton", email = "feisuzhu@163.com"},
]
dependencies = [
    "daemonize>=2.5.0",
    "torch>=2.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache"}

[project.scripts]
overmind-server = "overmind.server:start"
overmind-list = "overmind.cli:list_loaded"
overmind-shutdown= "overmind.cli:shutdown"
overmind-drop-shell= "overmind.cli:drop_shell"

[build-system]
requires = ["pdm-backend", "torch"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

[tool.pdm.options]
add = ["--no-isolation"]
install = ["--no-isolation"]
build = ["--no-isolation"]

[tool.pdm.version]
source = "scm"
