[project]
name = "overmind"
dynamic = ["version"]
description = "Daemon to serve shared PyTorch models"
authors = [
    {name = "Proton", email = "feisuzhu@163.com"},
]
dependencies = [
    "daemonize>=2.5.0",
    "torch>=2.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache"}

[project.scripts]
overmind-server = "overmind.server:start"
overmind-list = "overmind.cli:list_loaded"
overmind-shutdown= "overmind.cli:shutdown"
overmind-drop-shell= "overmind.cli:drop_shell"

[build-system]
requires = ["pdm-backend", "torch==2.1.2", "setuptools<70.0.0", "numpy"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true

[tool.pdm.options]
add = ["--no-isolation"]
install = ["--no-isolation"]
build = ["--no-isolation"]

[tool.pdm.version]
source = "scm"
